WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274315
Fix exception Fuzz in Baseline/DFG with exception return registers
https://bugs.webkit.org/show_bug.cgi?id=274315
Summary
Fix exception Fuzz in Baseline/DFG with exception return registers
Keith Miller
Reported
2024-05-17 08:39:15 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2024-05-17 08:39:22 PDT
<
rdar://problem/128230658
>
Keith Miller
Comment 2
2024-05-17 08:44:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28712
Keith Miller
Comment 3
2024-05-17 08:55:32 PDT
***
Bug 274284
has been marked as a duplicate of this bug. ***
EWS
Comment 4
2024-05-18 09:58:32 PDT
Committed
278956@main
(16709ef06aca): <
https://commits.webkit.org/278956@main
> Reviewed commits have been landed. Closing PR #28712 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug