Fix exception Fuzz in Baseline/DFG with exception return registers https://bugs.webkit.org/show_bug.cgi?id=274315 rdar://128230658

Reviewed by Mark Lam.

Baseline/DFG `emitExceptionCheck` didn't forward the exception register
it's going to use to `callExceptionFuzz` so it could get out of sync
with the fuzzers state. Now `callExceptionFuzz` will properly fill the
exception register with the new exception if it's set.

* Source/JavaScriptCore/jit/AssemblyHelpers.cpp:
(JSC::AssemblyHelpers::callExceptionFuzz):
(JSC::AssemblyHelpers::emitExceptionCheck):
* Source/JavaScriptCore/jit/AssemblyHelpers.h:

Canonical link: https://commits.webkit.org/278956@main